# rofi-hoogle

./: .gitignore  README.md  default.nix  flake.nix  package.nix
haskell/: CHANGELOG.md  LICENSE  default.nix  hie.yaml  rofi-hoogle.cabal  shell.nix
haskell/csrc/: rofi_hoogle_hs.h  wrapper.c
haskell/src/: HoogleQuery.hs  Main.hs  PangoUtils.hs
haskell/src/HoogleQuery/: Native.hs  ResultSorting.hs  SearchHoogle.hs
rofi-hoogle-plugin/: package.nix
rofi-hoogle-plugin/src/: Makefile  plugin.c
