cabal-version:      2.4
name:               rofi-hoogle-hs
version:            0.1.0.0
synopsis:           Query Hoogle from Rofi

-- A longer description of the package.
-- description:
homepage:           github.com/rebeccaskinner/rofi-hoogle

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rebecca Skinner
maintainer:         rebecca@rebeccaskinner.net

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md

library
    build-depends:  base
                  , hoogle
                  , bytestring
                  , containers
                  , stm
    exposed-modules: HoogleQuery
                   , HoogleQuery.SearchHoogle

    hs-source-dirs: src

foreign-library rofi-hoogle-native
    type:             native-shared
    lib-version-info: 0:0:1

    other-modules:    HoogleQuery.Native
                    , HoogleQuery.SearchHoogle

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , rofi-hoogle-hs
                    , hoogle
                    , bytestring
                    , containers
                    , stm
    hs-source-dirs:   src
    c-sources:        csrc/wrapper.c
    default-language: Haskell2010
